--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -1,24 +1,31 @@
 {
   "cli": {
-    "version": ">= 5.9.0"
+    "version": ">= 5.9.0",
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_BACKEND_URL": "https://flight-deals-151.preview.emergentagent.com"
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_BACKEND_URL": "https://flight-deals-151.preview.emergentagent.com"
       }
     },
     "production": {
       "android": {
-        "buildType": "aab"
+        "buildType": "app-bundle"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_URL": "https://cheap-flight.preview.emergentagent.com"
+        "EXPO_PUBLIC_BACKEND_URL": "https://flight-deals-151.preview.emergentagent.com"
       }
     }
   },
