Fix: Correct projectId UUID in app.json

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -60,7 +60,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "cheap-flight-project"
+        "projectId": "7b5c3c9b-db28-496a-a9b6-2f221e26ab1e"
       }
     }
   }
